# TaskList

./: CMakeLists.txt  README.rst  icons.qrc  qml.qrc  tasklist.pro  translations.qrc
.github/workflows/: apk.yml
android/: AndroidManifest.xml  build.gradle
android/src/com/github/stemoretti/tasklist/: Alarm.java  MainActivity.java
cpp/: appdata.cpp  appdata.h  iconprovider.cpp  iconprovider.h  list.cpp  main.cpp  settings.cpp  settings.h  sortfiltermodel.h  system.cpp  system.h  task.h
qml/: DateTimeDialog.qml  InfoPage.qml  ListManagementPage.qml  ListPage.qml  PopupConfirm.qml  ReorderDelegate.qml  ReorderListView.qml  SelectItemsBar.qml  SettingsContinentsPage.qml  SettingsCountriesPage.qml  SettingsPage.qml  Snackbar.qml  SortedListView.qml  TaskDetailsPage.qml  TextInputBar.qml  languages.js  main.qml
qml/common/: App.qml  AppStackPage.qml  AppToolBar.qml  ColorComboBox.qml
qml/ekke/popups/: PopupError.qml  PopupInfo.qml
qml/pages/: AboutPage.qml  AddTaskPage.qml  DragDropListDelegate.qml  DragDropListView.qml  EditListsPage.qml  ListPage.qml  NewListPage.qml  SettingsContinentsPage.qml  SettingsCountriesPage.qml  SettingsItem.qml  SettingsPage.qml  SortedListView.qml  TaskDetailsPage.qml
qml/popups/: ColorSelectionPopup.qml  DatePicker.qml  LocalizationPopup.qml  PopupConfirm.qml  TimePicker.qml
scripts/: android-build-debug.sh  android-build-release.sh
src/: appdata.cpp  appdata.h  globalsettings.cpp  globalsettings.h  iconprovider.cpp  list.cpp  list.h  main.cpp  settings.cpp  settings.h  sortfiltermodel.cpp  sortfiltermodel.h  system.cpp  system.h  task.cpp  task.h  uniqueid.cpp  uniqueid.h
translations/: tasklist_en.ts  tasklist_it.ts
